[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/dialogueBox.gd" type="Script" id=1]
[ext_resource path="res://resources/assets/images/DialogueSpriteSheet2.tex" type="Texture" id=2]
[ext_resource path="res://resources/assets/fonts/main_font.fnt" type="BitmapFont" id=3]

[node name="DialogueBox" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="Tile0" type="Sprite" parent="."]

transform/pos = Vector2( -96, -64 )
texture = ExtResource( 2 )
flip_h = true
hframes = 5
frame = 2

[node name="Tile1" type="Sprite" parent="."]

transform/pos = Vector2( -96, 0 )
transform/rot = 90.0
texture = ExtResource( 2 )
flip_h = true
hframes = 5
frame = 1

[node name="Tile2" type="Sprite" parent="."]

transform/pos = Vector2( -96, 64 )
texture = ExtResource( 2 )
flip_h = true
flip_v = true
hframes = 5
frame = 2

[node name="Tile3" type="Sprite" parent="."]

transform/pos = Vector2( -32, -64 )
texture = ExtResource( 2 )
hframes = 5
frame = 1

[node name="Tile4" type="Sprite" parent="."]

transform/pos = Vector2( -32, 0 )
texture = ExtResource( 2 )
hframes = 5

[node name="Tile5" type="Sprite" parent="."]

transform/pos = Vector2( -32, 64 )
texture = ExtResource( 2 )
flip_v = true
hframes = 5
frame = 1

[node name="Tile6" type="Sprite" parent="."]

transform/pos = Vector2( 32, -64 )
texture = ExtResource( 2 )
hframes = 5
frame = 1

[node name="Tile7" type="Sprite" parent="."]

transform/pos = Vector2( 32, 0 )
texture = ExtResource( 2 )
hframes = 5

[node name="Tile8" type="Sprite" parent="."]

transform/pos = Vector2( 32, 64 )
texture = ExtResource( 2 )
flip_v = true
hframes = 5
frame = 1

[node name="Tile9" type="Sprite" parent="."]

transform/pos = Vector2( 96, -64 )
texture = ExtResource( 2 )
hframes = 5
frame = 2

[node name="Tile10" type="Sprite" parent="."]

transform/pos = Vector2( 96, 0 )
transform/rot = -90.0
texture = ExtResource( 2 )
hframes = 5
frame = 3

[node name="Tile11" type="Sprite" parent="."]

transform/pos = Vector2( 96, 64 )
texture = ExtResource( 2 )
flip_v = true
hframes = 5
frame = 2

[node name="Tile12" type="Sprite" parent="."]

transform/pos = Vector2( -160, 0 )
texture = ExtResource( 2 )
flip_h = true
hframes = 5
frame = 4

[node name="Tile13" type="Sprite" parent="."]

transform/pos = Vector2( 160, 0 )
texture = ExtResource( 2 )
hframes = 5
frame = 4
modulate = Color( 1, 1, 1, 0 )

[node name="Text" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -105.0
margin/top = -75.0
margin/right = 100.0
margin/bottom = 73.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.05
one_shot = false
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


